syntax = "proto3";

package proto;

option go_package = "github.com/calmato/gran-book/proto";

service NotificationService {
  rpc Reply(HelloRequest) returns (HelloResponse);
}

service InquiryService {
  rpc CreateInquiry(CreateInquiryRequest) returns (InquiryResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message CreateInquiryRequest {
  string user_id = 1;
  string email = 2;
  string description = 3;
  string label = 4;
}

message InquiryResponse {
  string user_id = 1;
  string email = 2;
  string description = 3;
  string label = 4;
  string inquiry_id = 5;
  string created_at = 6;
  string updated_at = 7;
}
